@@ -1,6 +1,9 @@
 Revision history for WWW::Mechanize
 
 {{$NEXT}}
+    [ENHANCEMENTS]
+    - form_with and all_forms_with() now support the "action" attribute to find
+      forms (GH#349) (Julien Fiegehenn)
 
 2.14      2022-08-15 19:19:24Z
     [FIXED]
